# mapping_library

./: README.md
convenience/: CMakeLists.txt  README.md
convenience/src/: conversions.cpp  conversions.h  files.cpp  files.h
gp_compressor/src/: gp_mapping.cpp  gp_registration.cpp  rbf_kernel.cpp  rbf_kernel.h
gp_mapping/: CMakeLists.txt  README.md
gp_mapping/src/: asynch_visualizer.cpp  gp_compressor.cpp  gp_octree.cpp  gp_octree.h  sparse_gp.h  sparse_gp.hpp  test_gp_mapping.cpp
graph_primitives/: CMakeLists.txt  README.md
graph_primitives/gboost-0.1.1/: Makefile.options
graph_primitives/gboost-0.1.1/src-graphmatch/: graphmatch.cpp
graph_primitives/gboost-0.1.1/src-gspan/: Makefile  dfs.cpp  graph.cpp  gspan.cpp  gspan.h  mexgspan.cpp
graph_primitives/matlab/: cellfind.m  cluster_edges.m  connected_components.m  convert_graphs.m  convert_graphs2.m  convert_positions.m  display_graph.m  display_graph2.m  display_graph_map.m  dot2mat.m  dot2mat2.m  extra_analysis.m  find_areas.m  find_doors.m  frequent_subgraphs.m  frequent_subgraphs2.m  mat2dot.m  primitives.m  show_positions_in_map.m  test_cliques.m  testscript.m
graph_primitives/src/: display_graph.cpp  display_graph_map.cpp  graph_extractor.cpp  graph_extractor.h  test_bgl.cpp  test_graph.cpp  test_plot_bgl.cpp
ransac_primitives/: CMakeLists.txt  README.md
ransac_primitives/src/: base_primitive.cpp  base_primitive.h  cylinder_primitive.cpp  cylinder_primitive.h  plane_primitive.cpp  plane_primitive.h  primitive_extractor.cpp  primitive_extractor.h  primitive_leaf.cpp  primitive_leaf.h  primitive_octree.cpp  primitive_octree.h  primitive_params.h  primitive_visualizer.h  sphere_primitive.cpp  sphere_primitive.h  test_find_point.cpp  test_sphere_components.cpp
sparse_compression/: CMakeLists.txt  README.md
spatial_primitives/: CMakeLists.txt  README.md
spatial_primitives/src/: base_primitive.cpp  base_primitive.h  cylinder_primitive.h  plane_primitive.cpp  primitive_extractor.cpp  primitive_extractor.h  primitive_leaf.h  primitive_octree.h  primitive_visualizer.cpp  primitive_visualizer.h  sphere_primitive.cpp  test_primitives.cpp
